adding some meta-data

--- a/faq.html
+++ b/faq.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:type" content="website" />
     <title>Assets Manager - FAQ</title>
+    <meta property="og:title" content="Assets Manager - FAQ" />
+    <meta property="og:description" content="Trouvez réponse à vos questions ou posez les directement !" />
+    <meta name="description" content="Trouvez réponse à vos questions ou posez les directement !" />
+    <meta property="og:image" content="res/medias/icons/white_logo.svg" />
 
     <link rel="stylesheet" href="res/css/style.css">
     <link rel="shortcut icon" href="res/medias/icons/white_logo.svg" type="image/x-icon">
