--- a/index.html
+++ b/index.html
@@ -3,12 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:type" content="website" />
     <title>Assets Manager - Catalogue</title>
+    <meta property="og:title" content="Assets Manager - Catalogue" />
+    <meta property="og:description" content="Découvrez tout un catalogue d'assets pour pouvoir décorer votre projet !" />
+    <meta name="description" content="Découvrez tout un catalogue d'assets pour pouvoir décorer votre projet !" />
+    <meta property="og:image" content="res/medias/icons/white_logo.svg" />
 
     <link rel="stylesheet" href="res/css/style.css">
     <link rel="shortcut icon" href="res/medias/icons/white_logo.svg" type="image/x-icon">
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 
     <script src="res/js/app.js" defer></script>
 </head>
