changing section element by footer

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
         
         </main>
-        <section id="footer">
+        <footer id="footer">
             <div class="links">
                 <ul>
                     <li>
@@ -67,7 +67,7 @@
             </div>
             <div class="logo"><img src="res/medias/icons/white_logo.svg" alt="Logo du site" srcset=""></div>
             <div class="copyright">© 2025 Assets Manager all rights reserved</div>
-        </section>
+        </footer>
     </div>
 </body>
 </html>
