--- a/faq.html
+++ b/faq.html
@@ -84,7 +84,7 @@
                 
             </section>
         </main>
-        <section id="footer">
+        <footer id="footer">
             <div class="links">
                 <ul>
                     <li>
@@ -100,7 +100,7 @@
             </div>
             <div class="logo"><img src="res/medias/icons/white_logo.svg" alt="Logo du site" srcset=""></div>
             <div class="copyright">© 2025 Assets Manager all rights reserved</div>
-        </section>
+        </footer>
     </div>
 </body>
 </html>
