add view more button

--- a/index.html
+++ b/index.html
@@ -43,6 +43,60 @@
                 </div>
             </div>
         </section>
+        <div id="visualizer">
+            <div class="inner">
+                <div class="top">
+                    <p class="name" id="v_name">Cocotier</p>
+                    <span class="id" id="v_id">#0001</span>
+                </div>
+                <div class="image" id="v_img" style="background-image: url('/res/medias/trees/0001.png');"></div>
+                <div class="tags" id="v_tags">
+                    <span>grand</span>
+                    <span>tropical</span>
+                    <span>fruitier</span>
+                </div>
+                <div class="description" id="v_description">
+                    <p class="text">Description indisponible.</p>
+                </div>
+                <div class="infos">
+                    <div class="left">
+                        <h3 class="label">Coordonnées</h3>
+                        <div class="rows">
+                            <div class="x">
+                                <span>x</span>
+                                <p id="v_coords_x">-3319</p>
+                            </div>
+                            <div class="y">
+                                <span>y</span>
+                                <p id="v_coords_y">-60</p>
+                            </div>
+                            <div class="z">
+                                <span>z</span>
+                                <p id="v_coords_z">-3606</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="right">
+                        <h3 class="label">Taille</h3>
+                        <div class="rows size">
+                            <div class="x">
+                                <span>Largeur</span>
+                                <p id="v_size_w">18</p>
+                            </div>
+                            <div class="y">
+                                <span>longueur</span>
+                                <p id="v_size_l">18</p>
+                            </div>
+                            <div class="z">
+                                <span>Hauteur</span>
+                                <p id="v_size_h">20</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button onclick="visualisation_modal.close()">Revenir au catalogue</button>
+            </div>
+        </div>
         <section id="catalogue">
             <div id="catalog_content" class="inner">
                 
