--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                 <p id="v_size_w">18</p>
                             </div>
                             <div class="y">
-                                <span>longueur</span>
+                                <span>Longueur</span>
                                 <p id="v_size_l">18</p>
                             </div>
                             <div class="z">
